# ClipboardHistory

./: .gitignore  .gitignore.txt  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
inc/: ClipboardManager.h
src/: ClipboardManager.cpp
